--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ Bibliografia /Livros/cluster_survey_10_02_00.pdf
 Bibliografia /Livros/Livro de Redes Neurais Artificiais.pdf
 Bibliografia /Livros/Python para analise de dados - Wes McKinney.pdf
 Bibliografia /Livros/vladimir-vapnik-the-nature-of-statistical-learning-springer-2010.pdf
+Bibliografia /Livros/applied-predictive-modeling-max-kuhn-kjell-johnson_1518.pdf
+Bibliografia /Livros/Machine Learning for Hackers_ Case Studies and Algorithms to Get You Started [Conway & White 2012-02-25].pdf
+Bibliografia /Livros/The-Morgan-Kaufmann-Series-in-Data-Management-Systems-Jiawei-Han-Micheline-Kamber-Jian-Pei-Data-Mining.-Concepts-and-Techniques-3rd-Edition-Morgan-Kaufmann-2011.pdf
+Bibliografia /Livros/Machine Learning for Hackers_ Case Studies and Algorithms to Get You Started [Conway & White 2012-02-25].pdf
