--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ Bibliografia /Livros/applied-predictive-modeling-max-kuhn-kjell-johnson_1518.pdf
 Bibliografia /Livros/Machine Learning for Hackers_ Case Studies and Algorithms to Get You Started [Conway & White 2012-02-25].pdf
 Bibliografia /Livros/The-Morgan-Kaufmann-Series-in-Data-Management-Systems-Jiawei-Han-Micheline-Kamber-Jian-Pei-Data-Mining.-Concepts-and-Techniques-3rd-Edition-Morgan-Kaufmann-2011.pdf
 Bibliografia /Livros/Machine Learning for Hackers_ Case Studies and Algorithms to Get You Started [Conway & White 2012-02-25].pdf
+Bibliografia /Livros/ISLRSeventhPrinting.pdf
+Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine - Learning - Tom Mitchell.pdf
+Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine Learning Tom M2.docx
