--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Bibliografia /Livros/Machine Learning for Hackers_ Case Studies and Algorithms t
 Bibliografia /Livros/ISLRSeventhPrinting.pdf
 Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine - Learning - Tom Mitchell.pdf
 Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine Learning Tom M2.docx
+Bibliografia /Livros/DELIRIUM/DSM-III.pdf
