limpeza de dados

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Bibliografia /Livros/ISLRSeventhPrinting.pdf
 Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine - Learning - Tom Mitchell.pdf
 Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine Learning Tom M2.docx
 Bibliografia /Livros/DELIRIUM/DSM-III.pdf
+.Rproj.user
