Books not uploaded

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine - Learning - To
 Bibliografia /Livros/Machine Learning - Tom M. Mitchell /Machine Learning Tom M2.docx
 Bibliografia /Livros/DELIRIUM/DSM-III.pdf
 .Rproj.user
+Bibliografia /Livros/517979097-Imbalanced-Classification-With-Python-by-Jason-Brownlee-Z-lib-org.pdf
+Bibliografia /Livros/encyclopedia-of-machine-learning-2010.pdf
+Bibliografia /Livros/ESLII_print12_toc.pdf
+Bibliografia /Livros/Kauermann2021_Book_StatisticalFoundationsReasonin-2.pdf
+Bibliografia /Livros/the-voice-in-the-machine-building-computers-that-understand-speech_compress.pdf
+Bibliografia /Livros/Two discourses concerning the soul of brutes./b3034086x_0002.pdf
